# python-conversion-test

./: ErgonSteve.fig  GattonBESSDataApril_16.mat  GattonBESSDataMay_16.mat  GattonBESSDatafromMarch17_16.mat  PM_AESC1.emf  PM_AESC1.fig  SoC_ref_gen.m  SoC_ref_gen_dsch.m  batmodeltest.m  bb_pv_cluster1.m  cdparam.m  charge_control.m  charge_control_randtest.m  charge_smoothing_control.m  chg_test1.m  crdr.m  curr_mm_3p3_4w.m  daaa.mat  daily_plotter.m  daily_sim.m  daily_sim_combined_CD.m  daily_sim_combined_CD_test1.m  daily_sim_combined_CD_test2.m  daily_sim_for_random_run.m  data_highvarPV.mat  data_read.m  data_slightvarPV.mat  data_smthPV.mat  data_with_1.mat  data_wo_1.mat  demand_curve.m  demand_energy_calc.m  dialgtest1.m  discharge_control.m  gatenergycalc1.m  gatton_data_reader.m  gbess_perf1.m  ghi1.m  gtn_net1.m  ieee_4bus_3ph_3_4wire.m  (+24 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
doc/learning/: ieee-4bus-topology-variations.md
md-stash/: concepts-to-cover.md  first-review-diagrams-ascii.md  first-review-diagrams.md  gridlens-oe-sales-pitch.md  matlab-syntax-concept-crash-course.md
pypsa-demo/: pyproject.toml  quickstart_markets.py  quickstart_southern_africa.py  requirements.txt  topology_1_radial.py  topology_2_ring.py  topology_3_mesh.py  topology_5_dual_source.py
python_conversion_psa/: main.py  nr_iteration.py  system_data.py  ymatrix.py
reports/: investigation-april-13.md
