[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pypsa-demo"
version = "0.1.0"
description = "IEEE 4-Bus topology variations implemented in PyPSA"
requires-python = ">=3.11"
dependencies = [
    "pypsa>=1.1.2",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
]
